# chess

./: CMakeLists.txt  README.md  exit_codes.h  main.cpp
chessboard/: board.cpp  board.h  chessObject.cpp  chessObject.h  field.cpp  field.h  line.cpp  line.h  move.cpp  move.h
gamecontrol/: game.cpp  game.h  history.cpp  history.h
gamemodes/: client.cpp  client.h  engine.cpp  engine.h  gameMode.cpp  gameMode.h  local.cpp  local.h  online.cpp  online.h  server.cpp  server.h
icons/: Icon author attribution.md  qtres.qrc
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
nvwa-1.1/nvwa/: debug_new.cpp  debug_new.h
